fix broken styles after GlotPress Update

--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,11 @@ table.translations tr.preview.has-glotdict .original::before {
 }
 
 table.translations tr.preview.has-glotdict th+.priority+.original::before {
-    margin-left: calc(-.5em - 32px);
+    margin-left: calc(-.5em - 49px);
 }
 
 table.translations tr.preview.has-glotdict.has-warnings th+.priority+.original::before {
-    margin-left: calc(-.5em - 34px);
+    margin-left: calc(-.5em - 50px);
 }
 
 .has-old-string td:nth-last-child(2),
@@ -100,6 +100,11 @@ table.translations tr.preview.has-original-copy,
     }
 }
 
+#gd-glossary-link,
+#gd-guide-link{
+	margin: 0 1px;
+}
+
 #gd_search_anonymous {
     margin-right: 5px;
 }
@@ -161,8 +166,18 @@ table.translations tr.preview.has-original-copy,
     border-left: 3px solid #dc3232;
 }
 
-button[class*="gd-"] strong {
+.actions+td button[class*="gd-"] strong {
     display: inline-block;
+	margin-left:-10px;
+}
+
+.actions+td button.gd-button{
+	-ms-flex-pack: center!important;
+	    justify-content: center!important;
+	padding: 14px 2px !important;
+	width: 80px !important;
+	margin: 1px 0 !important;
+	min-height: 28px !important;
 }
 
 .gd-btn-action {
@@ -515,7 +530,7 @@ li.consistency-header-index {
     max-width: 100vw;
     right: 0;
     z-index: -1;
-    margin-top: -22px;
+    margin-top: -19px;
     height: 55px;
 }
 
@@ -572,7 +587,8 @@ li.consistency-header-index {
     padding-right: 10px;
 }
 
-.gd_settings_panels input[type="checkbox"] {
+.gp-content .gd_settings_panels input[type=checkbox],
+.gp-content .gd_settings_panels input[type=radio] {
     margin-right: 6px;
     margin-left: -20px;
     vertical-align: -1px;
@@ -627,10 +643,6 @@ li.consistency-header-index {
 .gd_settings_panels {
     background: #e5f5fa;
     padding: 10px;
-}
-
-.gd_settings_tabs {
-    margin-top: 22px;
 }
 
 .gd_settings__radio3,
@@ -762,18 +774,20 @@ li.consistency-header-index {
     box-sizing: border-box;
 }
 
-.gd-on-translations .gp-content .bulk-actions input.button,
-.gd-on-translations .gp-content input.button.gd-review {
-    vertical-align: top;
-    height: auto;
-    margin: 0 5px;
-    padding: 10px;
-    font-size: 14px;
+#bulk-actions-toolbar-top{
+	float:left !important;
+}
 
+.gd-on-translations .gp-content input.button.gd-review {
+    margin: 0 5px;
+}
+
+#gd-sticky-header .paging{
+	width: 100%;
+	margin-top: .5em !important;
 }
 
 #gd-toggle-header {
-    float: right;
     margin-left: 40px;
     margin-top: -1px;
 }
@@ -834,9 +848,22 @@ code {
 }
 
 .gd-on-translations .gp-content h2 {
-    font-size: 19px;
-    font-weight: 500;
-    line-height: 20px;
+	display: block!important;
+	width: 100%!important;
+    font-size: 19px!important;
+    font-weight: 500!important;
+    line-height: 20px!important;
+	padding: 10px 8px 9px!important;
+	border-radius: 5px!important;
+	background-color: rgb(0 115 170 / 5%)!important;
+}
+
+#gd_title_links{
+	float: right;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-direction: row-reverse;
+	    flex-direction: row-reverse;
 }
 
 .gd-on-translations .gp-content h2 a.glossary-link {
